[gd_scene load_steps=9 format=3 uid="uid://bl60ug2oh1ppq"]

[ext_resource type="Script" path="res://Scenes/multiplayer_setup.gd" id="1_x5a8x"]
[ext_resource type="Theme" uid="uid://dqqmva14h5al4" path="res://Utils/Themes/label.tres" id="2_74rk6"]
[ext_resource type="Texture2D" uid="uid://dpyefhmxfkepu" path="res://Assets/UI/MainBGLighter.png" id="2_hisjn"]
[ext_resource type="Texture2D" uid="uid://b1gcjcf4qbryi" path="res://Assets/UI/button_primary_normal.png" id="3_y8wyt"]
[ext_resource type="Texture2D" uid="uid://c0sayeopluoor" path="res://Assets/UI/button_primary_pressed.png" id="4_iqwqb"]
[ext_resource type="Texture2D" uid="uid://d2lphoxbvpshk" path="res://Assets/UI/button_back.png" id="5_5inl7"]
[ext_resource type="Texture2D" uid="uid://b4i8tch1mahi8" path="res://Assets/UI/player_list_bg.png" id="7_1dpll"]
[ext_resource type="AudioStream" uid="uid://caehe17orvu1p" path="res://Assets/Audios/click1.ogg" id="7_bqfdr"]

[node name="Multiplayer_setup" type="Node2D"]
script = ExtResource("1_x5a8x")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="MainBg" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(538, 1082)
scale = Vector2(0.412, 0.4)
texture = ExtResource("2_hisjn")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="UI"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -353.0
offset_top = 204.0
offset_right = 353.0
offset_bottom = 312.0
grow_horizontal = 2
theme = ExtResource("2_74rk6")
theme_type_variation = &"Header"
text = "Multiplayer Setup"

[node name="BackButton" type="TextureButton" parent="UI"]
offset_left = 65.0
offset_top = 209.0
offset_right = 165.0
offset_bottom = 309.0
texture_normal = ExtResource("5_5inl7")

[node name="HostingSet" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64

[node name="PlayerNameInput" type="LineEdit" parent="UI/HostingSet"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Player 1"
placeholder_text = "Enter your name"
alignment = 1

[node name="HostButton" type="TextureButton" parent="UI/HostingSet"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_y8wyt")
texture_pressed = ExtResource("4_iqwqb")

[node name="HostLabel" type="Label" parent="UI/HostingSet/HostButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -24.5
offset_right = 50.0
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_74rk6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "HOST"

[node name="JoinButton" type="TextureButton" parent="UI/HostingSet"]
unique_name_in_owner = true
layout_mode = 2
texture_normal = ExtResource("3_y8wyt")
texture_pressed = ExtResource("4_iqwqb")

[node name="JoinLabel" type="Label" parent="UI/HostingSet/JoinButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -41.5
offset_top = -24.5
offset_right = 41.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_74rk6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "JOIN"

[node name="HostedSet" type="VBoxContainer" parent="UI"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 64
alignment = 1

[node name="PlayerList" type="VBoxContainer" parent="UI/HostedSet"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4

[node name="AddBotButton" type="TextureButton" parent="UI/HostedSet"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("7_1dpll")
stretch_mode = 5

[node name="AddBotButtonLabel" type="Label" parent="UI/HostedSet/AddBotButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.5
offset_top = -24.5
offset_right = 70.5
offset_bottom = 24.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_74rk6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Add Bot"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="TextureButton" parent="UI/HostedSet"]
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_y8wyt")
texture_pressed = ExtResource("4_iqwqb")

[node name="StartLabel" type="Label" parent="UI/HostedSet/StartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -13.0
offset_right = 44.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_74rk6")
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Start Game"

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="AudioListener2D"]
unique_name_in_owner = true
stream = ExtResource("7_bqfdr")
bus = &"SFX"

[connection signal="pressed" from="UI/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="UI/HostingSet/HostButton" to="." method="_on_host_button_pressed"]
[connection signal="pressed" from="UI/HostingSet/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="UI/HostedSet/AddBotButton" to="." method="_on_add_bot_button_pressed"]
[connection signal="pressed" from="UI/HostedSet/StartButton" to="." method="_on_start_button_pressed"]
